# libaudiodecoder

./: .gitignore  CMakeLists.txt  LICENSE  README.md  SConstruct
examples/playsong/: README  playsong.cpp  playsong.sln  playsong.vcproj
examples/playsong/playsong.xcodeproj/: project.pbxproj
include/: audiodecoder.h  audiodecoderbase.h  audiodecodercoreaudio.h  audiodecodermediafoundation.h
src/: SConscript  audiodecoderbase.cpp  audiodecodercoreaudio.cpp  audiodecodermediafoundation.cpp
